--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,13 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "redirects": [
+      {
+        "source": "/",
+        "destination": "/source/index.html",
+        "type": 302
+      }
     ]
   }
 }
